// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment from current user should render a comment 1`] = `
<div>
  <article
    class="sc-eCYdqJ eopLEu"
  >
    <header>
      <picture
        style="width: 2rem;"
      >
        <source
          srcset="/./images/avatars/image-amyrobson.webp"
          type="image/webp"
        />
        <img
          alt="amyrobson"
          src="/./images/avatars/image-amyrobson.png"
          style="width: 100%;"
        />
      </picture>
      <span
        class="sc-gKXOVf cAhEkI"
      >
        amyrobson
      </span>
      <span
        class="sc-iBkjds iXTMIL"
      >
        you
      </span>
      <span>
        1 month ago
      </span>
    </header>
    <p>
      Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.
    </p>
    <div
      id="votes"
    >
      <div
        class="sc-dkzDqf fIRSEx"
        role="widget"
      >
        <button
          class="sc-hKMtZM dbWWXw"
          type="button"
        >
          <svg>
            plus.svg
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
        <p>
          12
        </p>
        <button
          class="sc-hKMtZM dbWWXw"
          type="button"
        >
          <svg>
            minus.svg
          </svg>
          <span
            class="sr-only"
          >
            Minus
          </span>
        </button>
      </div>
    </div>
    <div
      id="buttons"
    >
      <button
        class="sc-bczRLJ bDIsdp"
        color="secondary"
        type="button"
      >
        <svg>
          delete.svg
        </svg>
        Delete
      </button>
      <button
        class="sc-bczRLJ gbCjDT"
        color="primary"
        type="button"
      >
        <svg>
          edit.svg
        </svg>
        Edit
      </button>
    </div>
  </article>
</div>
`;

exports[`Comment from other user should render a comment 1`] = `
<div>
  <article
    class="sc-eCYdqJ eopLEu"
  >
    <header>
      <picture
        style="width: 2rem;"
      >
        <source
          srcset="/./images/avatars/image-amyrobson.webp"
          type="image/webp"
        />
        <img
          alt="amyrobson"
          src="/./images/avatars/image-amyrobson.png"
          style="width: 100%;"
        />
      </picture>
      <span
        class="sc-gKXOVf cAhEkI"
      >
        amyrobson
      </span>
      <span>
        1 month ago
      </span>
    </header>
    <p>
      Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.
    </p>
    <div
      id="votes"
    >
      <div
        class="sc-dkzDqf fIRSEx"
        role="widget"
      >
        <button
          class="sc-hKMtZM dbWWXw"
          type="button"
        >
          <svg>
            plus.svg
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
        <p>
          12
        </p>
        <button
          class="sc-hKMtZM dbWWXw"
          type="button"
        >
          <svg>
            minus.svg
          </svg>
          <span
            class="sr-only"
          >
            Minus
          </span>
        </button>
      </div>
    </div>
    <div
      id="buttons"
    >
      <button
        class="sc-bczRLJ gbCjDT"
        color="primary"
        type="button"
      >
        <svg>
          reply.svg
        </svg>
        Reply
      </button>
    </div>
  </article>
</div>
`;
